<?xml version="1.0" encoding="utf-8"?><!--
    All English string are contained here. All strings added here must also be added
    in res/values-b+fr/String.xml with the identical string name and a value translated to french
 -->

<resources>
    <string name="app_name">mRides</string>
    <string name="Sign_In">Sign In</string>
    <string name="Register">Register"</string>
    <string name="title_activity_preference_page">preference_page</string>
    <string name="route_name">Route Name :"</string>
    <string name="action_settings">Settings</string>
    <string name="hint_name">ex: Work</string>
    <string name="Frequency">Frequency :</string>
    <string name="Once">Once</string>
    <string name="Repeated">Repeated</string>
    <string name="Arrival_time">Departure Time:</string>
    <string name="Departure_time">Departure Time:</string>
    <string name="Driver">Driver</string>
    <string name="Passenger">Passenger</string>
    <string name="Next">Next</string>
    <string name="Sample_time">20:00</string>
    <string name="Select">Change</string>
    <string name="Departure_date">Departure Date:</string>
    <string name="Sample_date">1-5-2017</string>
    <string name="Select_preferences">Select Preferences</string>
    <string name="mind_men">I do not mind men</string>
    <string name="mind_women">I do not mind women</string>
    <string name="mind_smoking">I do not mind smoking</string>
    <string name="mind_pets">I do not mind pets</string>
    <string name="createRoute">Create Route</string>
    <string name="preferences">Preferences</string>
    <string name="email">Email:</string>
    <string name="rating">Rating</string>
    <string name="title_activity_create_route">CreateRouteActivity</string>
    <string name="GetStarted">Get Started"</string>
    <string name="GmailSignIn">SIGN IN WITH GMAIL</string>
    <string name="welcome">Welcome To mRides</string>
    <string name="Logout">Logout"</string>
    <string name="introText">To start taking advantage of the wonderful features offered to you by mRides, you must first log in using a gmail account</string>
    <string name="server_client_id">346814516997-7ia3jkkg2arc7lukroqrccmoqh676c8a.apps.googleusercontent.com</string>
    <string name="web_server_ip">192.175.117.171</string>
    <string name="web_server_port">80</string>
    <string name="invie_sent">Invite Sent</string>
    <string name="url">http://successdrivingschool.ca</string>
    <string name="googleVerificationURL">https://www.googleapis.com/oauth2/v3/tokeninfo?id_token=</string>
    <string name="direction_url_api">https://maps.googleapis.com/maps/api/directions/json?</string>
    <string name="google_maps_api_key">AIzaSyDBjGOW7Yv5t-RwJI-Dhl86rZnZcQCd93c</string>
    <string name="wifi_not_found">Internet not connected</string>
    <string name="title_activity_temp_main">TempMainActivity</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="active_routes">Active Routes</string>
    <string name="male">Male</string>
    <string name="settings">Settings</string>
    <string name="female">Female</string>
    <string name="smoking">Smoking</string>
    <string name="non_smoking">No Smoking</string>
    <string name="ok">Ok</string>

    <!--Not translated-->
    <string name="invited_to_route">Route Invitation</string> <!--right after this sentence is the name-->
    <string name="accept">Accept Invite</string>
    <string name="my_account">My Account</string>
    <string name="inbox">Inbox</string>
    <string name="enter_start_address">Enter start address</string>
    <string name="find_path">Find path</string>
    <string name="enter_destination_address">Enter destination address</string>
    <string name="cancel">Cancel</string>
    <string name="invite">Invite</string>
    <string name="invite_accepted">Invitation Accepted</string>
    <string name="loggedOut">Signed Out</string>
    <string name="save_changes">Save Changes</string>
    <string name="enter_start">Enter Start</string>
    <string name="enter_end">Enter End</string>
    <string name="click_to_enter_start_address">Click to enter start address</string>
    <string name="click_to_enter_destination_address">Click to enter destination address</string>
    <string name="submit_rating">Submit Rating</string>
    <string name="delete_route">Delete route</string>
    <string name="prompt_message">Are you sure you want to delete this route?</string>
    <string name="delete_confirm">Route deleted</string>

    <string-array name="planets">
        <item> Mercury</item>
        <item> Venus</item>
        <item> Earth</item>
    </string-array>
</resources>
