<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.mrides.Activity.SettingsActivity">

    <TextView
        android:text="@string/settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:id="@+id/textViewSettings"
        android:textSize="30sp"/>

    <TextView
        android:text="@string/male"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/switchGender"
        android:layout_toLeftOf="@+id/textViewSettings"
        android:layout_toStartOf="@+id/textViewSettings"
        android:id="@+id/textViewMale"
        android:textSize="20sp"/>

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="57dp"
        android:id="@+id/switchGender"
        android:layout_below="@+id/textViewSettings"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:text="@string/female"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewFemale"
        android:layout_alignBottom="@+id/switchGender"
        android:layout_toRightOf="@+id/textViewSettings"
        android:layout_toEndOf="@+id/textViewSettings"
        android:textSize="20sp"/>

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/switchSmoking"
        android:layout_below="@+id/switchGender"
        android:layout_alignLeft="@+id/switchGender"
        android:layout_alignStart="@+id/switchGender"
        android:layout_marginTop="129dp"/>

    <TextView
        android:text="@string/smoking"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/switchSmoking"
        android:layout_toLeftOf="@+id/switchSmoking"
        android:layout_toStartOf="@+id/switchSmoking"
        android:layout_marginRight="12dp"
        android:layout_marginEnd="12dp"
        android:id="@+id/textViewSmoking"
        android:textSize="20sp"/>

    <TextView
        android:text="@string/non_smoking"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewNosmoking"
        android:textSize="20sp"
        android:layout_alignBaseline="@+id/switchSmoking"
        android:layout_alignBottom="@+id/switchSmoking"
        android:layout_toRightOf="@+id/switchSmoking"
        android:layout_toEndOf="@+id/switchSmoking"
        android:layout_marginLeft="13dp"/>

    <Button
        android:text="Save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="58dp"
        android:id="@+id/buttonSave"/>

</RelativeLayout>
