<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_temp_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.mrides.TempMainActivity">



    <Button
        style="@style/orange_rounded_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Logout"
        android:onClick="signOut"
        android:background="@drawable/orange_button_rounded"
        android:id="@+id/button2" />


    <TextView
        android:text="TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button2"
        android:layout_alignLeft="@+id/button2"
        android:layout_alignStart="@+id/button2"
        android:layout_marginLeft="60dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="15dp"
        android:id="@+id/email" />

    <Button
        style="@style/orange_rounded_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/createRoute"
        android:onClick="createRoute"
        android:background="@drawable/orange_button_rounded"
        android:id="@+id/createRoute"
        android:layout_below="@+id/email"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp" />

    <Button
        style="@style/orange_rounded_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/preferences"
        android:onClick="preferences"
        android:background="@drawable/orange_button_rounded"
        android:id="@+id/preferences"
        android:layout_marginTop="23dp"
        android:layout_below="@+id/createRoute"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
