<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:id="@+id/profile_activity"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              android:orientation="vertical"
              tools:context="com.example.mrides.Activity.ProfileActivity"
              android:weightSum="1"
              android:background="@color/backgroundColor">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="Jane Doe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textViewFirstName"
            android:textSize="28sp"
            android:gravity="center_horizontal"
            android:textColor="#ffffff"/>

        <TextView
            android:id="@+id/textViewEmail"
            android:text="sampleEmail@gmail.com"
            style="@style/regularSizeText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textColor="#ffffff"/>

    </LinearLayout>

    <ImageView
        android:layout_centerHorizontal="true"
        android:layout_width="251dp"
        android:layout_height="152dp"
        android:layout_gravity="center"
        app:srcCompat="@drawable/sample_profile_image"
        android:id="@+id/imageViewProfile"
        android:layout_weight="0.02"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:text="@string/rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewRating"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="#ffffff"
            android:textSize="18sp"/>

        <TextView
            android:text="3.5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewRatingValue"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="#ffffff"
            android:textSize="18sp"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="30dp">

        <Button
            android:text="@string/invite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonInvite"
            android:layout_weight="1"
            android:textColor="@color/backgroundColor"
            android:onClick="sendInvite" />

        <Button
            android:text="@string/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonCancel"
            android:layout_weight="1"
            android:textColor="@color/backgroundColor"/>
    </LinearLayout>

</LinearLayout>
